--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 Major tasks
 -----------
 
- * Python3: "with open(filename): pass" raise an AttributeError('__exit__')
+ * Python3: set/fix OBJECT_TYPES of proxy()
+ * Python3: allow __subclasses__ attribute?
  * Write a test for traceback
  * re.match('a', 'a') raises a
    TypeError("Unable to proxy a value of type <type '_sre.SRE_Match'>")
