--- a/README
+++ b/README
@@ -51,6 +51,8 @@ config.enable('feature'). Available features:
  - "future": from __future__ import ...
  - "help": pydoc.help(), use "import pydoc" outside the sandbox to use it
  - "interpreter": give access to standard streams, enable traceback
+ - "itertools": itertools module
+ - "math": math module
  - "regex": compile regex, match regex, search regex, etc. (re module)
  - "site": allow to read the license file
  - "stdin": sys.stdin, input() and raw_input()
