Add utf_16_be to encodings feature

--- a/README
+++ b/README
@@ -48,8 +48,8 @@ config.enable('feature'). Available features:
    generator.gi_code
  - "debug_sandbox": enable traceback of the sandbox itself
  - "datetime": datetime module
- - "encodings": encodings module with ascii, latin_1, utf_8, utf_32_be and
-   rot_13 codecs (submodules)
+ - "encodings": encodings module with ascii, latin_1, utf_8, utf_16_be,
+   utf_32_be and rot_13 codecs (submodules)
  - "exit": sys.exit(), BaseException, KeyboardInterrupt, SystemExit, quit()
  - "future": from __future__ import ...
  - "help": pydoc.help(), use "import pydoc" outside the sandbox to use it
