Write tests for regex feature
Fix regex features for re.compile, re.finditer, re.match and
re.search().

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ Major tasks
 -----------
 
  * Deny modification of open.func_defaults
+ * FIXME: ReadOnlyList(list('abc')) == list('abc') is False
  * Choose getModulePath() implementation (problem with "from encodings import
    aliases")
  * Python3: set/fix OBJECT_TYPES of proxy()
