--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
-Version 1.0.2
+Version 1.0.2 (2010-09-15)
 
-    * SECURITY FIX: Deny access to all dict methods able to modify a dict, not only
-      dict.__delitem__ and dict.__setitem__.
+    * SECURITY FIX: Deny access to all dict methods able to modify a dict, not
+      only dict.__delitem__ and dict.__setitem__.
 
 Version 1.0.1 (2010-07-26)
     * Fix Python 2.5 compatibility
