More TODO tasks

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+Document "dangerous functions": functions allowing to override the sandbox policy
+Write a learning tool
+
 Major tasks
 -----------
 
