--- a/README
+++ b/README
@@ -53,12 +53,13 @@ config.enable('feature'). Available features:
    utf_32_be and rot_13 codecs (submodules). Enable codecs feature.
  - "exit": sys.exit(), BaseException, KeyboardInterrupt, SystemExit, quit()
  - "future": from __future__ import ...
+ - "hashlib": hashlib module.
  - "help": pydoc.help(), use "import pydoc" outside the sandbox to use it. Enable regex feature.
  - "interpreter": give access to standard streams, enable traceback. Enable
    encodings, exit, site, stdin, stdout, stderr and traceback features.
  - "itertools": itertools module
  - "math": math module
- - "random": random module. Enable math feature.
+ - "random": random module. Enable hashlib and math features.
  - "regex": compile regex, match regex, search regex, etc. (re module)
  - "site": allow to read the license file
  - "stdin": sys.stdin, input() and raw_input()
