Update ChangeLog, README and TODO files

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,13 +8,17 @@ allowSafeModule() method of the SandoxConfig, the result of the function is
 not proxified. This version improves also the support of CPython restricted
 mode and is mostly compatible with Python 3.
 
-    * Block access to type.__bases__
+    * Deny unsafe configuration: the _sandbox module or the CPython restricted
+      mode is mandatory
+    * The recursion limit is now configurable with a default of 50 frames
+    * Allow the compile() builtin by default
+    * Block access to type.__bases__ to protect against a crasher in CPython
     * Block access to function.func_defaults/__defaults__
     * Add SandoxConfig.allowSafeModule(): similar to allowModule() but don't
       proxify the attribute
     * SandboxConfig doesn't import modules to get their path
     * interpreter config feature is more strict: don't give access to
-      frame.f_locals nor generator.gi_code (don't enable code feature)
+      frame.f_locals
     * Add __dir__() special method to read object proxy and fake module
       objects
     * Add "codecs", "datetime", "encodings", "itertools", "math", "random"
@@ -23,6 +27,9 @@ mode and is mostly compatible with Python 3.
       unicode literals
     * On Python 2.x, enable CPython restricted mode if the _sandbox module is
       missing (_sandbox becomes optional on Python 2.x).
+    * Allow access to frame.f_code and generator.gi_code
+    * Drop the "code" configuration feature
+    * Run the test suite with and without the CPython restricted mode
 
 Version 1.0.3 (2010-09-16)
 --------------------------
