--- a/README
+++ b/README
@@ -15,11 +15,13 @@ Blocked Python functions (by default):
  * Deny importing Python modules
  * Deny exiting Python
  * Deny access to stdin, stdout or stderr
- * Deny some builtins symbols like compile(), execfile() or KeyboardInterrupt
+ * Deny some builtins symbols like execfile(), reload() or KeyboardInterrupt
  * Deny execution of arbitrary bytecode (creation of arbitrary code object)
 
 A timeout of 5 seconds if used by default. You can enable all of these
 features by setting the sandbox configuration.
+
+The default recursion limit is 50 frames.
 
 Protection of the namespace:
 
@@ -44,8 +46,6 @@ To enable a feature, use SandboxConfig('feature1', 'feature2', ...) or
 config.enable('feature'). Available features:
 
  - "codecs": codecs module
- - "code": compile() builtin, frame.f_locals, frame.f_code and
-   generator.gi_code
  - "debug_sandbox": allow to display a traceback of the sandbox. Enable
    traceback feature.
  - "datetime": datetime module
@@ -85,7 +85,10 @@ CPython restricted mode is disabled by default. The restricted mode is
 incompatible with SandboxConfig "traceback" feature and allowPath() method.
 
 The restricted mode doesn't exist in Python3 anymore, it was removed with
-bastion and rexec modules: http://svn.python.org/view?view=rev&revision=55301
+bastion and rexec modules:
+
+ * http://svn.python.org/view?view=rev&revision=55301
+ * http://hg.python.org/cpython/rev/f60c877d52c8/
 
 Other options
 -------------
@@ -168,6 +171,7 @@ Python
    http://pypi.python.org/pypi/RestrictedPython
    http://svn.zope.org/zope.security/trunk/src/zope/security/
  * Brett Canon's "objcap" secured Python interpreter
+   http://mail.python.org/pipermail/python-dev/2006-June/066344.html
    http://sayspy.blogspot.com/2007/05/i-have-finished-securing-python.html
    http://svn.python.org/view/python/branches/bcannon-objcap/secure_python.c?revision=56111&view=markup
  * Python taint mode:
