--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.6
+-----------
+
+    * Execute code in a subprocess using the Python subprocess module
+      or os.fork()
+
 Version 1.5 (2012-03-20)
 ------------------------
 
