--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Major tasks
 -----------
 
+ * Implement the timeout in the parent process
  * Hide type.__bases__ on Python 2.5 or mark the attribute as read-only
  * Python3 support: fix proxy()
  * Write an option to run the code in a subprocess
