--- a/README
+++ b/README
@@ -28,7 +28,7 @@ limits:
  * recursion limit = 50 frames
  * number of child process = 0 (disable fork or thread at the OS level)
  * pysandbox is able to catch crashes like segmentation fault (SIGSEGV)
- * stderr is redirected to /dev/null (or :NUL on Windows)
+ * stdin, stdout and stderr are redirected to /dev/null (or :NUL on Windows)
 
 Protection of the namespace:
 
