--- a/README
+++ b/README
@@ -163,7 +163,7 @@ proxified: they are replaced by read-only views of the objects.
 Status
 ======
 
-pysanbox is tested on Python 2.5 and 2.6 on Debian Sid.
+pysanbox 1.5 is tested on Python 2.5 and 2.6 on Debian Sid.
 
 See TODO file for the complete status.
 
